Revert "Change JDK 17 to JDK 11 to increase monitoring possibilities. (#52)"
This reverts commit 19684d7432d0557984940529f096924483026dd9.